# MathCore

./: CMakeLists.txt
Core/: AABB.h  Any.h  Frustum.h  Macros.h  Plane.h  Span.h  Sphere.h  TypeTraits.h  Types.h  ZFAssert.h
Core/Math/: Angle.h  Distance.cpp  Distance.h  Intersect.cpp  Intersect.h  LookAt.h  Math.h  Matrix.h  Numbers.h  Projection.h  Quaternion.h  RayIntersect.h  Rotation.h  Scale.h  Transform.h  Translate.h
Core/Math/detail/: Angle.inl  Rotation.inl  Scale.inl  Transform.inl  Translate.inl
Core/Ptr/: intrusive_base.h  intrusive_ptr.h  intrusive_refcount.h
Core/Utils/: Convert.cpp  Convert.h  Convert.inl
Tests/: AABB_tests.cpp  Any_tests.cpp  Frustum_tests.cpp  LookAt_tests.cpp  Math_tests.cpp  Plane_tests.cpp  RayIntersect_tests.cpp  Span_tests.cpp  Sphere_tests.cpp  intrusive_ptr_tests.cpp
